--- a/src/lib/var.scss
+++ b/src/lib/var.scss
@@ -4,6 +4,7 @@ $colorMap: (
     colorLight: rgba(255, 255, 255, 0.80),
     fontDark: #1D1D1F,
     primary: #06C,
+    backgroundWhite: #fff
     
 );
 
