--- a/src/container/apple/style.scss
+++ b/src/container/apple/style.scss
@@ -4,6 +4,14 @@
 .header {
     @extend .section;
     background-color: s.color('backgroundDark');
+
+
+}
+.header-light {
+    @extend .section;
+    background-color: s.color('backgroundWhite');
+    display: flex;  
+ 
 }
 
 .header__content {
@@ -11,6 +19,12 @@
     display: flex;
     padding: s.space(4) 0;
     justify-content: space-between;
+   
+
+    @media all and (width < s.screen('tablet')) {
+        display: flex;
+        flex-wrap: wrap;  
+    }
 }
 
 .header__block {
@@ -29,7 +43,13 @@
     @include s.click;
     font-style: s.size('small');    
 }
-
+.header-text {
+    color: #1D1D1F;
+    text-align: center; 
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+}
 
 .product__content {
     display: grid;
@@ -40,7 +60,6 @@
 .product__title {
     font-size: 56px;
     font-weight: 700;
-
 }
 
 .product__descr {
@@ -55,7 +74,6 @@
 
     @include s.click;
 }
-
 
 .product__link {
     @include s.linkAction;
@@ -124,9 +142,13 @@
 $productImage: (
     'iphone-pro' '/img/frame1.png' #000,
     'iphone' '/img/frame2.png' #fafafa,
+    'iwatch' '/img/frame3.png' #000,
     'trade-in' '/img/trade.png' #fbfbfd,
     'conference' '/img/wwwdc.png' #000,
-    
+    'ipad' '/img/ipad.png' #fbfbfd,
+    'business' '/img/business.png' #000,
+    'gift' '/img/gift.png' #fbfbfd,
+    'card' '/img/card.png' #fbfbfd,
     
 );
 
@@ -137,10 +159,56 @@ $productImage: (
     }
 }
 
-// .product--iphone-pro {
-//     background-image: url('/img/frame1.png');
-// }
+.product-small {
+    .product__title {
+        font-size: 40px;
+    }
+    .product__descr {
+        font-size: 20px;
+    }
+}
 
-// .product--iphone {
-//     background-image: url('/img/frame2.png');
-// }
+.footer {
+     display: flex;
+     flex-direction: row;     
+    align-content: center;
+    justify-content: center;         
+    width: 100%;
+    padding: 39px 0px; 
+    gap: 10px;  
+}
+.footer-content {
+    display: flex;    
+    gap: 20px;
+    width: 1200px;
+
+    @media all and (width < s.screen('laptop')) {
+        display: flex;
+        flex-wrap: wrap;
+        max-width: 700px;
+        justify-content: space-between;
+        padding: 0 20px;     
+    }  
+} 
+
+.footer-block {
+    display: flex;    
+    flex-direction: column;
+    align-items: flex-start;   
+     gap: 12px;
+    flex: 1 0 0;
+}
+
+.footer-title {
+color: #1D1D1F;
+font-size: 12px;
+font-weight: 600;
+margin-bottom: 4px;
+}
+
+.footer-link {   
+color: #424245;
+font-size: 12px;
+font-weight: 400;
+
+}
